# simple-esr

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  main.cpp  poopy.cpp  poopy.h
src/: axis.h  boundingvolume.h  cmdline.cpp  cmdline.h  main.cpp  node.h  poopy.cpp  poopy.h  svt.cpp  svt.h  tests.cpp  vec3.h
test/: CMakeLists.txt  data.h  tests.cpp
